[tool.poetry]
name = "advent-of-code-2019"
version = "0.1.0"
description = ""
authors = ["davidjoliver86"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
black = {version = "^19.0", allow-prereleases = true}
ipdb = "^0.12.2"
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
